# codecov-test

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile.am  README.md  check.am  code.json  configure.ac
ci-config/: codecov.bash  codecov.yml
docker/: README.md  codecov-testenv  debian-stable-gcc8  debian-testing-gcc9
libsrc/: Makefile.am  Simple.cc  Simple.hh
tests/: Makefile.am
tests/libtests/: Makefile.am  TestSimple.cc  test_driver.cc
